# guesswhat

./: docker-compose.yml  render.yaml
backend/: .env  Cargo.toml  Dockerfile  fetch_250_flags.py  flags_data.json  update_colors.py  update_colors_v2.py
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/games/: capital_guesser.rs  flag_frenzy.rs  mod.rs  rarest_flag.rs  spelling_bee.rs
backend/src/models/: mod.rs  room.rs
backend/src/routes/: auth.rs  leaderboard.rs  mod.rs  rooms.rs
backend/src/ws/: messages.rs  mod.rs  room_manager.rs  session.rs
frontend/: .env  index.html  package-lock.json  package.json
frontend/public/fonts/: stylesheet.css
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  Globe3D.tsx
frontend/src/components/games/: CapitalGuesser.tsx  FlagFrenzy.tsx  RarestFlag.tsx  SpellingBee.tsx
frontend/src/hooks/: useGameSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Game.tsx  Home.tsx  Lobby.tsx  Results.tsx
frontend/src/store/: gameStore.ts
