[package]
name = "guesswhat-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
mongodb = { version = "3", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
strsim = "0.11"
bcrypt = "0.15"
anyhow = "1"
thiserror = "1"
